--- a/06-WebContentStructure/AI.html
+++ b/06-WebContentStructure/AI.html
@@ -16,7 +16,7 @@
         requiring human intelligence. These tasks include
         problem-solving, understanding natural language,
         recognizing patterns, and making decisions.</p>
-
+        <img src="">
     <p>AI is a broad field that encompasses various subfields
         and techniques, such as machine learning, <a
             href="https://en.wikipedia.org/wiki/Natural_language_processing">natural
@@ -51,11 +51,6 @@
             human expertise in specific domains, such as medical
             diagnosis or financial decision-making.</li>
     </ol>
-
-
-
-
-
 
     <h2>Examples of AI in Daily Life</h2>
 
