--- a/06-WebContentStructure/countries.html
+++ b/06-WebContentStructure/countries.html
@@ -25,6 +25,18 @@
             <td>3.1</td>
             <td>Real (BRL)</td>
         </tr>
+        <tr>
+            <td>Poland</td>
+            <td>Warszawa</td>
+            <td>2.3</td>
+            <td>Polski Złoty (PLN)</td>
+        </tr>
+        <tr>
+            <td>Italy</td>
+            <td>Rome</td>
+            <td>4</td>
+            <td>Euro (€)</td>
+        </tr>
     </table>
 </body>
 </html>
