--- a/07-WebContentFormatting/krakow.html
+++ b/07-WebContentFormatting/krakow.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Historical Landmarks in Krakow</title>
+    <link rel="stylesheet" href="styles/4_3.css">
 </head>
 
 <body>
 
     <h2>Historical Landmarks in Krakow</h2>
 
-    <table border="1">
+    <table>
         <thead>
             <tr>
                 <th>Landmark</th>
