--- a/07-WebContentFormatting/landmarks.html
+++ b/07-WebContentFormatting/landmarks.html
@@ -23,6 +23,19 @@
             text-align: justify;
             font-family: 'Arial', sans-serif;
         }
+
+        h2 {
+            background-color: beige;
+            border: bisque, solid, 1 px;
+            padding: 10px;
+        }
+
+        ul {
+            background-color: brown;
+            color: beige;
+            font-family: 'Times New Roman', Times, serif;
+            text-align: center;
+        }
     </style>
 </head>
 
